@@ -1,3 +1,6 @@
+2012-07-31  6.7.8-8 Cristy  <quetzlzacatenango@image...>
+  * Use ConcatenateString() for multi-block GIF comments.
+
 2012-07-30  6.7.8-7 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.8-7, SVN revision 8766.
 
